trunk/Archive2/1a/2607047a1c4029/output
+ clang++ -std=c++11 -O -Wall -Wextra -pedantic-errors -pthread -stdlib=libstdc++ main.cpp
main.cpp:16:50: warning: unused parameter 'value' [-Wunused-parameter]
    static CByteArray serialize(const HLVariant& value)
                                                 ^
main.cpp:35:59: error: use of undeclared identifier 'value'
        return Serializer<HLVariant>::serialize(HLVariant(value));
                                                          ^
1 warning and 1 error generated.
